--- a/surprise/index.html
+++ b/surprise/index.html
@@ -7,7 +7,7 @@
         .city{width:100%;position:fixed;bottom: 0px;z-index: 100;}
         .city img{width: 100%;}
     </style>
-		<title>给你的一封信</title>	    
+		<title>surprise</title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
 		<script type="text/javascript" src="./file/jquery.min.js"></script>
 		<script type="text/javascript" src="./file/jscex.min.js"></script>
