--- a/surprise/index.html
+++ b/surprise/index.html
@@ -2,11 +2,11 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html;charset=gb2312">
-    <style>
+<!--     <style>
         body{margin:0;padding:0;overflow: hidden;}
         .city{width:100%;position:fixed;bottom: 0px;z-index: 100;}
         .city img{width: 100%;}
-    </style>
+    </style> -->
 		<title>surprise</title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
 		<script type="text/javascript" src="./file/jquery.min.js"></script>
