--- a/surprise/index.html
+++ b/surprise/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=gb2312">
 <!--     <style>
         body{margin:0;padding:0;overflow: hidden;}
-        .city{width:100%;position:fixed;bottom: 0px;z-index: 100;}
-        .city img{width: 100%;}
+        #main{width:100%;position:fixed;bottom: 0px;z-index: 100;}
+        #main img{width: 100%;}
     </style> -->
 		<title>surprise</title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
