--- a/surprise/index.html
+++ b/surprise/index.html
@@ -39,6 +39,7 @@
                       <span class="say">每个人陪你的日子或长或短</span><br>
                       <span class="say">在有我的日子里</span><br>
                       <span class="say">希望我能对你有所帮助</span><br>
+			    <span class="say">节日快乐</span><br>
                               <span class="say">哈哈哈</span><br>
                       <span class="say"><span class="space"></span> -- 吴胜泽的表叔</span> </font>
                           <br />
