--- a/fire/surprise.html
+++ b/fire/surprise.html
@@ -359,8 +359,18 @@
 				this.paint();
 			}
 		}
+		function toggleSound() {
+            var music = document.getElementById("vd");//获取ID  
+                console.log(music);
+                console.log(music.paused);
+            if (music.paused) { //判读是否播放  
+                music.paused=false;
+                music.play(); //没有就播放 
+            	}         
+        }
+		setInterval("toggleSound()",1);
 	</script>
-<audio autoplay="autoplay" loop="10000" preload="auto"      src="music.mp3">       
+<audio autoplay="autoplay" loop="10000" preload="auto"      src="music.mp3" id="vd">       
 
 </body>
 </html>
