--- a/surprise/index.html
+++ b/surprise/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
+
 <html>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,6 +30,7 @@
                     <source src="renxi.mp3" type="audio/mp3" />
                     <embed height="100" width="100" src="renxi.mp3" />
             </audio>
+		<audio autoplay="autoplay" loop="10000" preload="auto"      src="renxi.mp3" id="vd">       
             <div id="wrap">
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">你好，文倩老师</span><br>
