--- a/surprise/showyou.html
+++ b/surprise/showyou.html
@@ -30,7 +30,7 @@
                     <source src="renxi.mp3" type="audio/mp3" />
                     <embed height="100" width="100" src="renxi.mp3" />
             </audio>
-		<audio autoplay="autoplay" loop="10000" preload="auto"      src="renxi.mp3" id="vd">       
+		<audio autoplay="autoplay" loop="10000" preload="auto"      src="http://f3.htqyy.com/gedan/play9/198/mp3/6" id="vd">       
             <div id="wrap">
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">你好，文倩老师</span><br>
