--- a/surprise/showyou.html
+++ b/surprise/showyou.html
@@ -30,7 +30,31 @@
                     <source src="renxi.mp3" type="audio/mp3" />
                     <embed height="100" width="100" src="renxi.mp3" />
             </audio> -->
-		<audio autoplay="autoplay" loop="10000" preload="auto"      src="http://f3.htqyy.com/gedan/play9/198/mp3/6" id="vd">       
+<!-- 		<audio autoplay="autoplay" loop="10000" preload="auto"      src="http://f3.htqyy.com/gedan/play9/198/mp3/6" id="vd">        -->
+		<audio id="audio" loop src="http://f3.htqyy.com/gedan/play9/198/mp3/6">
+  （该浏览器不支持音频播放组件）
+</audio>
+<script>
+  const ele = document.querySelector("#audio");
+  let isAudioLoaded = false;
+  let isUserActioned = false;
+
+  function Play(e) {
+    console.log(e.type);
+    if (e.type === "click") isUserActioned = true;
+    else isAudioLoaded = true;
+
+    if (!isAudioLoaded) return console.log("音频未就绪");
+    if (!isUserActioned) return console.log("等待用户事件");
+
+    ele.load();
+    ele.play();
+    ele.oncanplay = undefined;
+  }
+
+  ele.oncanplay = Play;
+  window.addEventListener("click", Play, { once: true });
+</script>     
             <div id="wrap">
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">你好，文倩老师</span><br>
