--- a/surprise/showyou.html
+++ b/surprise/showyou.html
@@ -31,7 +31,7 @@
                     <embed height="100" width="100" src="renxi.mp3" />
             </audio> -->
 <!-- 		<audio autoplay="autoplay" loop="10000" preload="auto"      src="http://f3.htqyy.com/gedan/play9/198/mp3/6" id="vd">        -->
-		<audio id="audio" loop src="http://f3.htqyy.com/gedan/play9/198/mp3/6">
+		<audio id="audio" loop src="renxi.mp3">
   （该浏览器不支持音频播放组件）
 </audio>
 <script>
