--- a/surprise/showyou.html
+++ b/surprise/showyou.html
@@ -2,7 +2,7 @@
 
 <html>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=2.0, user-scalable=yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.1, user-scalable=yes" />
     <meta http-equiv="Content-Type" content="text/html;charset=gb2312">
 <!--     <style>
         body{margin:0;padding:0;overflow: hidden;}
