--- a/fire/tozhang.html
+++ b/fire/tozhang.html
@@ -20,12 +20,14 @@
 
 	<canvas id='cas' style="background-color:rgba(0,5,24,1);">浏览器不支持canvas</canvas>
 	<div class="city"><img src="https://img-blog.csdnimg.cn/ce9a197191204756be8fdac26bfe9d23.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAQembhA==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center" alt="" /></div>
-	<img src="https://img-blog.csdnimg.cn/e8ec2a9517a84bf3ab742fd4e8deb167.png#pic_center" alt="" id="moon" style="visibility: hidden;"/>
+	<img src="img/bgzhang.jpg" alt="" id="moon" style="visibility: hidden;"/>
 	<div style="display:none">
-		<div class="shape">希望你快快乐乐！</div>
-		<div class="shape">你是个善良的人！</div>
-		<div class="shape">你很漂亮！</div>
-		<div class="shape">520快乐！</div>
+		<div class="shape">小张同学<br/>儿童节快乐</div>
+		<div class="shape">摩羯座的人<br/>有灵性</div>
+		<div class="shape">你很有趣<br/>哈哈哈</div>
+		<div class="shape">你很漂亮<br/>哈哈哈</div>
+		<div class="shape">你很温和<br/>哈哈哈</div>
+		<div class="shape">我很喜欢你<br/>哈哈哈</div>
 	</div>
 	
 </div>
@@ -104,7 +106,7 @@
 
 		function drawMoon(){
 			var moon = document.getElementById("moon");
-			var centerX = canvas.width-200 , centerY = 100 , width = 80;
+			var centerX = canvas.width-200 , centerY = 100 , width = 0;
 			if(moon.complete){
 				ctx.drawImage(moon , centerX , centerY , width , width )
 			}
