--- a/fire/tozhang.html
+++ b/fire/tozhang.html
@@ -19,8 +19,9 @@
 <div style="height:700px;overflow:hidden;">
 
 	<canvas id='cas' style="background-color:rgba(0,5,24,1);">浏览器不支持canvas</canvas>
-	<div class="city"><img src="https://img-blog.csdnimg.cn/ce9a197191204756be8fdac26bfe9d23.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAQembhA==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center" alt="" /></div>
-	<img src="img/bgzhang.jpg" alt="" id="moon" style="visibility: hidden;"/>
+	<div class="city">
+<img src="img/tozhang.jpg" alt="" /></div>
+	
 	<div style="display:none">
 		<div class="shape">小张同学<br/>儿童节快乐</div>
 		<div class="shape">摩羯座的人<br/>有灵性</div>
