--- a/fire/tozhang.html
+++ b/fire/tozhang.html
@@ -18,17 +18,15 @@
 
 <div style="height:700px;overflow:hidden;">
 
-	<canvas id='cas' style="background-color:rgba(0,5,24,1);">浏览器不支持canvas</canvas>
-	<div class="city">
-<img src="img/tozhang.jpg" alt="" /></div>
+	<canvas id='cas' style="background-image:url(img/bgzhang.jpg);">浏览器不支持canvas</canvas>
 	
 	<div style="display:none">
-		<div class="shape">小张同学<br/>儿童节快乐</div>
-		<div class="shape">摩羯座的人<br/>有灵性</div>
-		<div class="shape">你很有趣<br/>哈哈哈</div>
-		<div class="shape">你很漂亮<br/>哈哈哈</div>
-		<div class="shape">你很温和<br/>哈哈哈</div>
-		<div class="shape">我很喜欢你<br/>哈哈哈</div>
+		<div class="shape"><p>小张同学</p><p>儿童节快乐</p></div>
+		<div class="shape"><p>摩羯座的人</p><p>有灵性</p></div>
+		<div class="shape"><p>你很有趣</p><p>哈哈哈</p></div>
+		<div class="shape"><p>你很漂亮</p><p>哈哈哈</p></div>
+		<div class="shape"><p>你很温柔</p><p>哈哈哈</p></div>
+		<div class="shape"><p>我很喜欢你</p><p>哈哈哈</p></div>
 	</div>
 	
 </div>
