--- a/fire/tozhang.html
+++ b/fire/tozhang.html
@@ -370,7 +370,7 @@
                 //console.log(music.paused);
             if (music.paused) { //判读是否播放  
                 music.paused=false;
-                //music.play(); //没有就播放 
+                music.play(); //没有就播放 
             	}         
         }
 		setInterval("toggleSound()",1);
