--- a/fire/tojieru.html
+++ b/fire/tojieru.html
@@ -25,7 +25,9 @@
 		<div class="shape">你很善良哈哈哈</div>
 		<div class="shape">你很漂亮哈哈哈</div>
 		<div class="shape">你很温柔哈哈哈</div>
-		<div class="shape">我很喜欢你哈哈哈</div>
+		<div class="shape">我希望能让你快乐哈哈哈</div>
+		<div class="shape">我希望你能考编成功哈哈哈</div>
+
 	</div>
 	
 </div>
