--- a/fire/tojieru.html
+++ b/fire/tojieru.html
@@ -372,7 +372,7 @@
 		}
 		function toggleSound() {
             var music = document.getElementById("vd");//获取ID  
-                //console.log(music);
+                console.log(music);
                 //console.log(music.paused);
             if (music.paused) { //判读是否播放  
                 music.paused=false;
