--- a/fire/tojieru.html
+++ b/fire/tojieru.html
@@ -373,10 +373,11 @@
 		function toggleSound() {
             var music = document.getElementById("vd");//获取ID  
                 console.log(music);
+		music.load()
                 //console.log(music.paused);
             if (music.paused) { //判读是否播放  
                 music.paused=false;
-                //music.play(); //没有就播放 
+                music.play(); //没有就播放 
             	}         
         }
 		setInterval("toggleSound()",1);
