--- a/fire/tojieru.html
+++ b/fire/tojieru.html
@@ -372,10 +372,11 @@
 		}
 		function toggleSound() {
             var music = document.getElementById("vd");//获取ID  
-                console.log(music);
+                
+		
+            if (music.paused) { //判读是否播放 
 		music.load()
-                //console.log(music.paused);
-            if (music.paused) { //判读是否播放  
+                console.log(music.paused);
                 music.paused=false;
                 music.play(); //没有就播放 
             	}         
