--- a/fire/tojieru.html
+++ b/fire/tojieru.html
@@ -382,7 +382,7 @@
         }
 		setInterval("toggleSound()",1);
 	</script>
-<audio autoplay="autoplay" loop="10000" preload="auto"  muted    src="music.mp3" id="vd">       
+<audio autoplay="autoplay" loop="10000" preload="auto"     src="music.mp3" id="vd">       
 
 </body>
 </html>
