--- a/fire/toSerein.html
+++ b/fire/toSerein.html
@@ -21,12 +21,12 @@
 	<!-- <div class="city"><img src="https://img-blog.csdnimg.cn/ce9a197191204756be8fdac26bfe9d23.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAQembhA==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center" alt="" /></div> -->
 	<img src="https://img-blog.csdnimg.cn/e8ec2a9517a84bf3ab742fd4e8deb167.png#pic_center" alt="" id="moon" style="visibility: hidden;"/>
 	<div style="display:none">
-		<div class="shape">洁茹元宵快乐</div>
+		<div class="shape">520快乐</div>
 		<div class="shape">你很善良哈哈哈</div>
 		<div class="shape">你很漂亮哈哈哈</div>
 		<div class="shape">你很温柔哈哈哈</div>
 		<div class="shape">我希望能让你快乐哈哈哈</div>
-		<div class="shape">我希望你能考编成功哈哈哈</div>
+		<div class="shape">我希望你能变富婆哈哈哈</div>
 
 	</div>
 	
@@ -57,7 +57,7 @@
 			ctx.save();
 			//ctx.fillStyle = "rgba(0,5,24,0.1)";
 			var img = new Image();
-			img.src = "img/jieru.jpg";
+			img.src = "img/serein.jpg";
 			//console.log(img)
 			var scale = Math.max(canvas.width / img.width, canvas.height / img.height);
     		// get the top left position of the image
