--- a/fire/toYoLo.html
+++ b/fire/toYoLo.html
@@ -57,7 +57,7 @@
 			ctx.save();
 			//ctx.fillStyle = "rgba(0,5,24,0.1)";
 			var img = new Image();
-			img.src = "img/yolo.png";
+			img.src = "img/yolo2.png";
 			//console.log(img)
 			var scale = Math.max(canvas.width / img.width, canvas.height / img.height);
     		// get the top left position of the image
