--- a/fire/surprise.html
+++ b/fire/surprise.html
@@ -25,7 +25,7 @@
 		<div class="shape">希望你快快乐乐！</div>
 		<div class="shape">你是个善良的人！</div>
 		<div class="shape">你很漂亮！</div>
-		<div class="shape">520快乐！</div>
+		<div class="shape">快快乐乐！</div>
 	</div>
 	
 </div>
